--- a/tecolotl-web/src/main/webapp/alumno/transcrip-final.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/transcrip-final.xhtml
@@ -78,7 +78,7 @@
                            </h:panelGroup>
                         </li>
                         <li class="listening  uk-margin-small-top ">
-                            <h1 class="uk-text-center lescuadron" style="color: white">Coloca la respuesta correcta</h1>
+                            <h1 class="uk-text-center lescuadron" style="color: white">Coloca la respuesta correctas</h1>
 
                             <h:panelGroup layout="block" styleClass="uk-grid padre contenedor-matching" pt:uk-grid="">
                                 <div class="columna-pregunta uk-width-expand">
