--- a/tecolotl-web/src/main/webapp/alumno/tareas-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/tareas-alumno.xhtml
@@ -56,73 +56,80 @@
         <h:outputStylesheet library="css" name="biblioteca.css"/>
 
         <div class="uk-container  margen-superior  padding-inferior">
-            <div class="uk-width-1-1@m uk-margin-medium-top">
-                <form id="search-form" action="">
-                    <div class="uk-inline uk-width-1-1">
-                        <span class="uk-form-icon uk-form-icon-flip" data-uk-icon="icon: search"/>
-                        <input class="uk-input uk-width-1-1 search-fld" type="text" placeholder="Type your search" autofocus=""/>
-                        <a href="#" class="search-filter" data-uk-filter-control="[data-tags*='']" hidden="">Search</a>
-                    </div>
-                </form>
-            </div>
+
             <div data-uk-filter="target: .js-filter">
-                <ul class="uk-subnav nav-default-profesor uk-subnav-alumno uk-margin-medium-top">
-                    <li class="uk-active" data-uk-filter-control=""><a href="#">Show All</a></li>
-                    <li data-uk-filter-control=".A1" ><a href="#">Level A1</a></li>
-                    <li data-uk-filter-control=".A1-A2" ><a href="#">Level A1-A2</a></li>
-                    <li data-uk-filter-control=".A2"><a href="#">Level A2</a></li>
-                    <li data-uk-filter-control=".B1"><a href="#">Level B1</a></li>
-                    <li data-uk-filter-control=".B2"><a href="#">Level B2</a></li>
-                    <li data-uk-filter-control=".C1"><a href="#">Level C1</a></li>
-                    <li data-uk-filter-control=".C2"><a href="#">Level C2</a></li>
-                </ul>
 
                 <h:panelGroup layout="block" styleClass="uk-grid js-filter uk-margin-medium-top uk-margin-large-bottom" pt:uk-grid="">
-                    <ui:repeat value="#{actividadControlador.actividadModeloLista}" var="actividadModelo">
-                        <h:panelGroup layout="block" styleClass="uk-width-1-3@l uk-width-1-2@m uk-width-1-1@s #{actividadModelo.languageLevel}" pt:data-tags="a beautiful landscape - nature outdoor">
-                            <div class="uk-card uk-card-default uk-card-small uk-card-hover card-border #{actividadModelo.languageLevel}">
+                    <ui:repeat value="#{tareasAlumnoControlador.tareaModeloLista}" var="tareaModelo">
+                        <h:panelGroup layout="block" styleClass="uk-width-1-3@m " pt:data-tags="a beautiful landscape - nature outdoor">
+                            <div class="uk-card uk-card-default uk-card-small uk-card-hover card-border ">
                                 <div class="uk-card-header border-card">
                                     <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-text-small" pt:uk-grid="">
                                         <div class="uk-width-expand">
                                             <h:graphicImage styleClass="uk-border-circle" library="img" name="mounstro/3ojos.svg" width="30" height="30" />
-                                            <span class="cat-txt">#{actividadModelo.topic}</span>
+                                            <span class="cat-txt">
+                                                <h:outputText value="#{tareaModelo.asignacion}">
+                                                    <f:convertDateTime locale="en_UK" timeStyle="short" type="both" dateStyle="full"/>
+                                                </h:outputText>
+                                            </span>
                                         </div>
                                         <div class="uk-width-auto uk-text-right uk-text-muted">
-                                            <h:outputText styleClass="uk-margin-small-right" pt:uk-icon="icon:clock"/>#{actividadModelo.time}
+                                            <h:outputText styleClass="uk-margin-small-right" pt:uk-icon="icon:clock"/>#{tareaModelo.reproducciones}
                                         </div>
                                     </h:panelGroup>
                                 </div>
-                                <div class="uk-card-media-top" >
+                                <div class="uk-card-media-top">
+                                    <h:panelGroup layout="block" pt:uk-spinner=""/>
                                     <h:panelGroup layout="block" styleClass="uk-inline " pt:uk-lightbox="">
-                                        <img src="https://i.ytimg.com/vi/#{actividadModelo.idVideo}/mqdefault.jpg"/>
-                                        <h:link styleClass="uk-position-center uk-icon" pt:uk-icon="icon: youtube; ratio: 3" pt:href="https://www.youtube.com/watch?v=#{actividadModelo.idVideo}"/>
+                                        <img src="https://i.ytimg.com/vi/0_1NU60qHWs/mqdefault.jpg"/>
+                                        <h:link styleClass="uk-position-center uk-icon" pt:uk-icon="icon: youtube; ratio: 3" pt:href="https://www.youtube.com/watch?v=#0_1NU60qHWs"/>
                                     </h:panelGroup>
+                                    <!--                                    <div class="video-error"><h:graphicImage library="img" name="video-error.svg" width="120" height="120"/> </div>-->
                                 </div>
                                 <div class="uk-card-body">
-                                    <h6 class="uk-margin-small-bottom uk-margin-remove-adjacent uk-text-bold uk-text-small">#{actividadModelo.question}</h6>
-                                    <p class="uk-text-small uk-text-muted ">#{actividadModelo.learnersType}</p>
+                                    <h6 class="uk-margin-small-bottom uk-margin-remove-adjacent uk-text-bold uk-text-small">dato3</h6>
+                                    <p class="uk-text-small uk-text-muted ">#{tareaModelo.id}</p>
                                 </div>
                                 <div class="uk-card-footer">
                                     <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-grid-divider uk-flex uk-flex-middle" pt:data-uk-grid="">
-                                        <div class="uk-width-auto uk-text-small text-color-level1 uk-text-bold ">
-                                            <h:panelGroup pt:uk-grid="" styleClass="uk-child-width-auto uk-grid uk-grid-small">
-                                                <button class="uk-button uk-button-small uk-button-primary uk-border-rounded">Ready!</button>
+                                        <div class="uk-width-expand ">
+                                            <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-child-width-1-5" pt:uk-grid="">
+                                                <div><h:form>
+                                                    <h:commandLink>
+                                                        <h:graphicImage pt:data-uk-tooltip="title: Listening" styleClass="uk-icon-image uk-svg" library="img" name="icono/listen.svg"/>
+                                                    </h:commandLink>
+                                                </h:form></div>
+                                                <div>
+                                                    <h:form>
+                                                        <h:commandLink pt:uk-toggle="#modal-transcript" rendered="true">
+                                                            <h:graphicImage pt:data-uk-tooltip="title: Trasncript" styleClass="uk-icon-image uk-svg" library="img" name="icono/transcript1.svg" />
+                                                        </h:commandLink>
+                                                    </h:form>
+                                                </div>
+                                                <div><h:form>
+                                                    <h:commandLink>
+                                                        <h:graphicImage  pt:data-uk-tooltip="title: Reading" styleClass="uk-icon-image uk-svg " library="img" name="icono/reading.svg" />
+                                                    </h:commandLink>
+                                                </h:form></div>
+                                                <div><h:form>
+                                                    <h:commandLink>
+                                                        <h:graphicImage pt:data-uk-tooltip="title: Grammar" styleClass="uk-icon-image uk-svg " library="img" name="icono/gramatica.svg" />
+                                                    </h:commandLink>
+                                                </h:form></div>
+                                                <div><h:form>
+                                                    <h:commandLink>
+                                                        <h:graphicImage pt:data-uk-tooltip="title: Quiz" styleClass="uk-icon-image uk-svg " library="img" name="icono/quizcalifica.svg" />
+                                                    </h:commandLink>
+                                                </h:form></div>
                                             </h:panelGroup>
                                         </div>
-                                        <div class="uk-width-expand ">
-                                            <div class="uk-grid uk-grid-small uk-child-width-1-5" uk-grid="">
-                                                <div><h:graphicImage pt:data-uk-tooltip="title: Listening" styleClass="uk-icon-image uk-svg" library="img" name="icono/listen.svg" /></div>
-                                                <div><h:graphicImage pt:data-uk-tooltip="title: Transcript" styleClass="uk-icon-image uk-svg " library="img" name="icono/transcript1.svg" /></div>
-                                                <div><h:graphicImage pt:data-uk-tooltip="title: Reading" styleClass="uk-icon-image uk-svg " library="img" name="icono/reading.svg" /></div>
-                                                <div><h:graphicImage pt:data-uk-tooltip="title: Grammar" styleClass="uk-icon-image uk-svg " library="img" name="icono/gramatica.svg" /></div>
-                                                <div><h:graphicImage pt:data-uk-tooltip="title: Quiz" styleClass="uk-icon-image uk-svg " library="img" name="icono/quizcalifica.svg" /></div>
-                                            </div>
-                                        </div>
+
                                     </h:panelGroup>
                                 </div>
                             </div>
                         </h:panelGroup>
                     </ui:repeat>
+
                 </h:panelGroup>
             </div>
         </div>
