--- a/tecolotl-web/src/main/webapp/alumno/transcrip-final.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/transcrip-final.xhtml
@@ -134,34 +134,34 @@
                             </h:panelGroup>
                         </li>
                         <li class="order-words">
-                                <h1 class="uk-text-center lescuadron" style="color: white">Ordenas las palabras en el orden correspondiente</h1>
-                                <div class="imagen-ordenar">
-                                    <h:graphicImage library="img" name="mounstro/whom.svg"/>
-                                </div>
-                                <h:panelGroup layout="block" styleClass="uk-container padding-contenedor estilo-contenedor " >
-
-                                    <h:panelGroup layout="block" styleClass="uk-child-width-1-5@m uk-padding-small uk-grid " pt:uk-grid="" pt:uk-sortable="">
-                                        <div>
-                                            <div class="palabra uk-text-center">1</div>
-                                        </div>
-                                        <div>
-                                            <div class="palabra uk-text-center">2</div>
-                                        </div>
-                                        <div>
-                                            <div class="palabra uk-text-center">3</div>
-                                        </div>
-                                        <div>
-                                            <div class="palabra uk-text-center">4</div>
-                                        </div>
-                                        <div>
-                                            <div class="palabra uk-text-center">5</div>
-                                        </div>
-                                        <div>
-                                            <div class="palabra uk-text-center">6</div>
-                                        </div>
-                                    </h:panelGroup>
-                                </h:panelGroup>
-
+                            <h1 class="uk-text-center lescuadron" style="color: white">Ordenas las palabras en el orden correspondiente</h1>
+                            <div class="imagen-ordenar">
+                                <h:graphicImage library="img" name="mounstro/whom.svg"/>
+                            </div>
+                            <ul class="uk-subnav uk-subnav-pill uk-flex uk-flex-center" uk-switcher="">
+                                <ui:repeat value="#{gramaticaControlador.gramaticaModeloLista}" var="gramatica" varStatus="estatus">
+                                    <li><a href="#">#{estatus.index + 1}</a></li>
+                                </ui:repeat>
+                            </ul>
+                            <ul class="uk-switcher uk-margin">
+                                <ui:repeat value="#{gramaticaControlador.gramaticaModeloLista}" var="gramatica">
+                                    <li>
+                                        <h:outputText value="Resuelto" rendered="#{not empty gramatica.respuesta}"/>
+                                        <h:form>
+                                            <h:panelGroup layout="block" styleClass="uk-container padding-contenedor estilo-contenedor">
+                                                <h:inputHidden value="#{empty gramatica.respuesta ? gramatica.palabra : gramatica.respuesta}" pt:data-respuesta="#{empty gramatica.respuesta}"/>
+                                                <h:panelGroup layout="block" styleClass="uk-child-width-1-5@m uk-grid  uk-padding-small" pt:uk-grid="" pt:uk-sortable="" rendered="#{empty gramatica.respuesta}"/>
+                                                <h:panelGroup layout="block" styleClass="uk-child-width-1-5@m uk-grid  uk-padding-small" pt:uk-grid="" rendered="#{not empty gramatica.respuesta}"/>
+                                            </h:panelGroup>
+                                            <h:inputHidden value="#{tareaGramaticaControlador.respuesta}"/>
+                                            <h:commandButton value="Send" onclick="completarPalabra(this)" rendered="#{empty gramatica.respuesta}">
+                                                <f:ajax listener="#{tareaGramaticaControlador.enviarRespuesta(gramatica.codigo, gramatica.actividadModelo.idVideo)}"
+                                                        execute="@form" onevent="function funcion(data) { remueveOrdenador(data) }"/>
+                                            </h:commandButton>
+                                        </h:form>
+                                    </li>
+                                </ui:repeat>
+                            </ul>
                         </li>
                         <li class="answer">
                             <h:panelGroup layout="block" styleClass="uk-child-width-1-2@m uk-grid" pt:uk-grid="">
@@ -216,12 +216,52 @@
 
             </div>
         </div>
-<!--        <script type="text/javascript">-->
-<!--            var palabras = document.querySelectorAll('.letra-guion strong');-->
-<!--            palabras.forEach(function (palabra) {-->
-<!--                palabra.style.color='green';-->
-<!--            });-->
-<!--        </script>-->
+        <script type="text/javascript">
+            document.querySelectorAll('.estilo-contenedor input[type=hidden]').forEach(function (palabra) {
+                subPalabra = palabra.value.split(" ");
+                if (palabra.dataset.respuesta === 'true') {
+                    subPalabra = revolver(subPalabra);
+                }
+                subPalabra.forEach(function (value1) {
+                    if (value1.trim() !== '') {
+                        padre = document.createElement('div');
+                        hijo = document.createElement('div');
+                        hijo.classList.add('palabra','uk-text-center');
+                        hijo.appendChild(document.createTextNode(value1.toLowerCase().replace('.','')));
+                        padre.appendChild(hijo);
+                        palabra.nextElementSibling.appendChild(padre);
+                    }
+                });
+            });
+
+            function revolver(arreglo) {
+                var indiceActual = arreglo.length, temporal, indiceAleatorio;
+                while (0 !== indiceActual) {
+                    indiceAleatorio = Math.floor(Math.random() * indiceActual);
+                    indiceActual -= 1;
+                    temporal = arreglo[indiceActual];
+                    arreglo[indiceActual] = arreglo[indiceAleatorio];
+                    arreglo[indiceAleatorio] = temporal;
+                }
+                return arreglo;
+            }
+            
+            function completarPalabra(elemento) {
+                var texto = elemento.previousElementSibling.previousElementSibling.querySelectorAll('div > div > .palabra');
+                var respuesta = '';
+                texto.forEach(function (value) {
+                    respuesta = respuesta.concat(value.textContent).concat(' ');
+                });
+                elemento.previousElementSibling.value = respuesta.trim();
+            }
+
+            function remueveOrdenador(data) {
+                if (data.status === 'success') {
+                    data.source.previousElementSibling.previousElementSibling.querySelector('.uk-sortable').removeAttribute('uk-sortable');
+                    data.source.disabled = true;
+                }
+            }
+        </script>
 
     </ui:define>
 </ui:composition>
