--- a/tecolotl-web/src/main/webapp/alumno/tareas-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/tareas-alumno.xhtml
@@ -30,7 +30,7 @@
             <ul class="uk-thumbnav uk-thumbnav-vertical uk-position-center uk-margin-large-top">
                 <!--<li class="uk-active"><a href="#"><img src="img/alumno/iconos-login/1.svg" width="80" alt=""></a></li>-->
                 <li uk-tooltip="title: Dashboard; pos: right"><h:link outcome="dashboard" ><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="80" alt=""/></h:link></li>
-                <li uk-tooltip="title: Activity; pos: right" class="uk-active" ><h:link outcome="tareas-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="80" alt="" /></h:link></li>
+                <li uk-tooltip="title: Activity; pos: right" class="uk-active" ><h:link outcome="tareas-alumno"><f:param name="idActividad" value="fs"/><f:param name="tarea" value="1"/><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="80" alt="" /></h:link></li>
                 <li uk-tooltip="title: Glossary; pos: right"><h:link outcome="glosario-alumno" ><h:graphicImage library="img" name="alumno/planetas/planeta2.svg"  width="80" alt="" /></h:link></li>
                 <li uk-tooltip="title: Grammar; pos: right"><h:link outcome="transcrip-final"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="80" alt="" /></h:link></li>
                 <li uk-tooltip="title: Map Mental; pos: right" ><h:link outcome="mapa-capas"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="80" height="" alt="" /></h:link></li>
@@ -40,7 +40,7 @@
         <div class="left-nav-wrap uk-position-relative  uk-hidden@xl ">
             <ul class="uk-thumbnav uk-thumbnav-vertical uk-position-top-center uk-margin-small-top">
                 <li uk-tooltip="title: Dashboard; pos: right" ><h:link outcome="dashboard" ><h:graphicImage library="img" name="alumno/planetas/tierra.svg"  width="50" alt=""/></h:link></li>
-                <li uk-tooltip="title: Activity; pos: right" class="uk-active"><h:link outcome="tareas-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg"  width="50" alt=""/></h:link></li>
+                <li uk-tooltip="title: Activity; pos: right" class="uk-active"><h:link outcome="tareas-alumno"><f:param name="idActividad" value="fs"/><f:param name="idActividad" value="fs"/><f:param name="tarea" value="1"/><h:graphicImage library="img" name="alumno/planetas/planeta1.svg"  width="50" alt=""/></h:link></li>
                 <li uk-tooltip="title: Glossary; pos: right" ><h:link outcome="glosario-alumno" ><h:graphicImage library="img" name="alumno/planetas/planeta2.svg"  width="50" alt=""/></h:link></li>
                 <li uk-tooltip="title: Grammar; pos: right"><h:link outcome="transcrip-final"><h:graphicImage library="img" name="alumno/planetas/planeta3.svg"  width="50" alt=""/></h:link></li>
                 <li uk-tooltip="title: Map Mental; pos: right" class="uk-active"><h:link outcome="mapa-capas"><h:graphicImage library="img" name="alumno/planetas/planeta4.svg"  width="50" alt=""/></h:link></li>
@@ -92,33 +92,41 @@
                                     <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-grid-divider uk-flex uk-flex-middle" pt:data-uk-grid="">
                                         <div class="uk-width-expand ">
                                             <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-child-width-1-5" pt:uk-grid="">
-                                                <div><h:form>
-                                                    <h:commandLink>
-                                                        <h:graphicImage pt:data-uk-tooltip="title: Listening" styleClass="uk-icon-image uk-svg" library="img" name="icono/listen.svg"/>
-                                                    </h:commandLink>
-                                                </h:form></div>
                                                 <div>
                                                     <h:form>
-                                                        <h:commandLink pt:uk-toggle="#modal-transcript" rendered="true">
+                                                        <h:link action="#{alumnoControlador.seleccion(tareaModelo)}" outcome="transcript-final">
+                                                            <f:param name="idVideo" value="0_1NU60qHWs"/>
+                                                            <h:graphicImage pt:data-uk-tooltip="title: Listening" styleClass="uk-icon-image uk-svg" library="img" name="icono/listen.svg"/>
+                                                        </h:link>
+                                                    </h:form></div>
+                                                <div>
+                                                    <h:form>
+                                                        <h:link action="#{alumnoControlador.seleccion(tareaModelo)}" outcome="">
                                                             <h:graphicImage pt:data-uk-tooltip="title: Trasncript" styleClass="uk-icon-image uk-svg" library="img" name="icono/transcript1.svg" />
-                                                        </h:commandLink>
+                                                        </h:link>
                                                     </h:form>
                                                 </div>
-                                                <div><h:form>
-                                                    <h:commandLink>
-                                                        <h:graphicImage  pt:data-uk-tooltip="title: Reading" styleClass="uk-icon-image uk-svg " library="img" name="icono/reading.svg" />
-                                                    </h:commandLink>
-                                                </h:form></div>
-                                                <div><h:form>
-                                                    <h:commandLink>
-                                                        <h:graphicImage pt:data-uk-tooltip="title: Grammar" styleClass="uk-icon-image uk-svg " library="img" name="icono/gramatica.svg" />
-                                                    </h:commandLink>
-                                                </h:form></div>
-                                                <div><h:form>
-                                                    <h:commandLink>
-                                                        <h:graphicImage pt:data-uk-tooltip="title: Quiz" styleClass="uk-icon-image uk-svg " library="img" name="icono/quizcalifica.svg" />
-                                                    </h:commandLink>
-                                                </h:form></div>
+                                                <div>
+                                                    <h:form>
+                                                        <h:link action="#{alumnoControlador.seleccion(tareaModelo)}" outcome="">
+                                                            <h:graphicImage  pt:data-uk-tooltip="title: Reading" styleClass="uk-icon-image uk-svg " library="img" name="icono/reading.svg" />
+                                                        </h:link>
+                                                    </h:form>
+                                                </div>
+                                                <div>
+                                                    <h:form>
+                                                        <h:link action="#{alumnoControlador.seleccion(tareaModelo)}" outcome="">
+                                                            <h:graphicImage pt:data-uk-tooltip="title: Grammar" styleClass="uk-icon-image uk-svg " library="img" name="icono/gramatica.svg" />
+                                                        </h:link>
+                                                    </h:form>
+                                                </div>
+                                                <div>
+                                                    <h:form>
+                                                        <h:link action="#{alumnoControlador.seleccion(tareaModelo)}" outcome="">
+                                                            <h:graphicImage pt:data-uk-tooltip="title: Quiz" styleClass="uk-icon-image uk-svg " library="img" name="icono/quizcalifica.svg" />
+                                                        </h:link>
+                                                    </h:form>
+                                                </div>
                                             </h:panelGroup>
                                         </div>
 
