--- a/tecolotl-web/src/main/webapp/alumno/tareas-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/tareas-alumno.xhtml
@@ -94,7 +94,7 @@
                                                 <div>
                                                     <h:form>
                                                         <h:link action="#{alumnoControlador.seleccion(tareaModelo)}" outcome="transcript-final">
-                                                            <f:param name="idVideo" value="0_1NU60qHWs"/>
+                                                            <f:param name="idVideo" value="00000000000"/>
                                                             <h:graphicImage pt:data-uk-tooltip="title: Listening" styleClass="uk-icon-image uk-svg" library="img" name="icono/listen.svg"/>
                                                         </h:link>
                                                     </h:form></div>
